# HPC4WC-overlapping

./: .gitignore  CMakeLists.txt  README.md  generate_ref_data.sh  nsys-arccos.sh  nsys-stencil.sh  requirements.txt  run-arccos_cuda.sh  run-arccos_gt4py.sh  run-arccos_gt4py_CPU.sh  run-arccos_gt4py_DEBUG.sh  run-arccos_gt4py_cpu.sh  run-arccos_gt4py_gpu.sh  run-arccos_gt4py_gpu_notransfer.sh  run-stencil_gpu.sh  run-stencil_gpu_streams.sh  run-stencil_gt4py_DEBUG.sh  run-stencil_gt4py_cpu.sh  run-stencil_gt4py_gpu.sh  run-stencil_gt4py_gpu_notransfer.sh  run-stencil_performance.sh  run-stencil_scaling.sh  slurm_run_arccos_gt4py_measurement.sh
measurements/: arcos_cuda_vs_gt4py_plots.ipynb  cuda_plots.ipynb  measurement plots.ipynb  measurement_gt4py_1.csv  perf_test_cuda_256955.csv  perf_test_cuda_258355.csv  perf_test_cuda_258355.err  perf_test_cuda_258355.out  perf_test_cuda_258360.err  perf_test_cuda_258360.out  perf_test_cuda_258768.out  perf_test_cuda_269302.out  stencil_cuda_vs_gt4py_plots.ipynb  stencil_gpu_scaling_265417.out  stencil_gpu_scaling_265510.out  stencil_gpu_test_257214.out
src/cuda/: arccos_cuda.cu  arccos_cuda.cuh  cnpy.cpp  example1.cpp  main.cpp  main.cu  runtime_analysis.py  stencil2d-gpu.cu  stencil2d-gpu_streams.cu  stencil2d_cuda.cpp
src/cuda/stencil2d_helper/: stencil2d-base.cpp  stencil_kernels.cu  stencil_kernels.cuh  utils.h
src/gt4py/: arccos_gt4py.py  run_arccos_gt4py.py  run_stencil2d_gt4py.py  stencil2d_gt4py.py  test_arccos_gt4py.py  test_timing_arccos.ipynb
src/reference/: generate_arccos_data.py  generate_arctan_data.py
tests/: test_arccos_gt4py_308723.err  test_arccos_gt4py_308723.out  test_arccos_gt4py_310785.err  test_arccos_gt4py_310785.out  test_stencil.sh
